--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -16,15 +16,15 @@
 
     <div class="jumbotron " >
         <h1 style="font-family: 'Dancing Script', cursive;
-        font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
-        <h3 style="font-family: 'Dancing Script', cursive;color:darkred;">Employees' Database</h3>
+        font-family: 'Patua One', cursive;">Winterfell Music Blog</h1>
+        <h3 style="font-family: 'Dancing Script', cursive;color:darkred;">A fun place</h3>
     </div>
 </div>
 
 <div th:fragment="footer">
     <footer>
         <div class="footer-main-div" style="margin-left: 300px; width: 1100px; height: 80px;">
-            <p style="color:#ffcce6; ">&copy; Copyright 2019 Emily Marinovich.</p>
+            <p style="color:#ffcce6; ">&copy; Copyright 2019 </p>
         </div>
 
     </footer><br/>
