--- a/src/main/resources/templates/albumform.html
+++ b/src/main/resources/templates/albumform.html
@@ -11,7 +11,7 @@
         <li ><a href="/albumlist">Albums' Information</a></li>
         <li><a href="/songlist">Songs' Information</a></li>
         <li><a class="current" href="/addalbum">Add Albums</a></li>
-        <li><a href="/song">Add Songs</a></li>
+        <li><a href="/addsong">Add Songs</a></li>
     </ul>
 </nav><br/>
 
