--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <nav id="nav_bar">
     <ul id="navmenu">
         <li><a class="current" href="/">Home</a></li>
-        <li ><a href="/albumtlist">Albums' Information</a></li>
+        <li ><a href="/albumlist">Albums' Information</a></li>
         <li><a href="/songlist">Songs' Information</a></li>
         <li><a href="/addalbum">Add Albums</a></li>
         <li><a href="/addsong">Add Songs</a></li>
